# priceid

./: README.md  pyproject.toml
demo/: priceid-small.tape  priceid.tape
src/priceid/: cmdline.py  pid.py  tui.py
